src/sections/deals/style.css
.deals {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.deals-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 40px;
  row-gap: 45px;
}

@media only screen and (max-width: 1024px) {
  .deals-container {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media only screen and (max-width: 800px) {
  .deals-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media only screen and (max-width: 600px) {
  .deals-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

